plugins {
    id 'org.springframework.boot' version '3.5.3'
    id 'io.spring.dependency-management' version '1.1.7'
    id 'org.asciidoctor.jvm.convert' version '4.0.4'
}

group = 'kr.co.goldenhome'
version = '0.0.1-SNAPSHOT'

allprojects {

    apply plugin: 'java'
    apply plugin: 'java-library'
    apply plugin: 'groovy'
    apply plugin: 'org.springframework.boot'
    apply plugin: 'io.spring.dependency-management'
    apply plugin: 'org.asciidoctor.jvm.convert'

    java {
        toolchain {
            languageVersion = JavaLanguageVersion.of(21)
        }
    }

    repositories {
        mavenCentral()
    }

    configurations {
        compileOnly {
            extendsFrom annotationProcessor
        }
        asciidoctorExt
    }

    ext {
        snippetsDir = file('build/generated-snippets')
    }

    dependencies {
        compileOnly 'org.projectlombok:lombok'
        annotationProcessor 'org.projectlombok:lombok'
        implementation 'org.slf4j:slf4j-api'
        asciidoctorExt 'org.springframework.restdocs:spring-restdocs-asciidoctor'
        testImplementation 'org.springframework.restdocs:spring-restdocs-mockmvc'

        testImplementation 'org.springframework.boot:spring-boot-starter-test'
        testImplementation("org.spockframework:spock-core:2.4-M6-groovy-4.0")
        testImplementation("org.spockframework:spock-spring:2.4-M6-groovy-4.0")

    }

    tasks.named('test') {
        outputs.dir snippetsDir
        useJUnitPlatform()
        jvmArgs '-Xshare:off'
        jvmArgs '-XX:+EnableDynamicAgentLoading'
    }

    tasks.named('asciidoctor') {
        sourceDir file('src/docs/asciidoc') // [변경 7]: index.adoc이 있는 경로
        outputDir layout.buildDirectory.dir('docs') // [변경 8]: HTML 출력 경로

        attributes   \
                'user-signup-snippets': 'gh-domain/gh-user/gh-user-api/build/generated-snippets/user-signup',
                'user-login-snippets': 'gh-domain/gh-user/gh-user-api/build/generated-snippets/user-login',
                'user-check-duplicated': 'gh-domain/gh-user/gh-user-api/build/generated-snippets/user-check-duplicated',
                'social-login': 'gh-domain/gh-user/gh-user-api/build/generated-snippets/social-login',
                'social-login-callback': 'gh-domain/gh-user/gh-user-api/build/generated-snippets/social-login-callback',
                'token-refresh': 'gh-domain/gh-user/gh-user-api/build/generated-snippets/token-refresh',
                'facility-read': 'gh-domain/gh-facility/gh-facility-api/build/generated-snippets/facility-read',
                'facility-readAll': 'gh-domain/gh-facility/gh-facility-api/build/generated-snippets/facility-readAll',
                'resume-write':'gh-domain/gh-resume/gh-resume-api/build/generated-snippets/resume-write',
                'resume-read':'gh-domain/gh-resume/gh-resume-api/build/generated-snippets/resume-read',
                'resume-modify': 'gh-domain/gh-resume/gh-resume-api/build/generated-snippets/resume-modify',
                'resume-submission-submit' :'gh-domain/gh-resume/gh-resume-api/build/generated-snippets/resume-submission-submit',
                'resume-submission-read': 'gh-domain/gh-resume/gh-resume-api/build/generated-snippets/resume-submission-read',
                'resume-submission-readAll': 'gh-domain/gh-resume/gh-resume-api/build/generated-snippets/resume-submission-readAll',
                'resume-submission-modify': 'gh-domain/gh-resume/gh-resume-api/build/generated-snippets/resume-submission-modify'




        sources {
            include '**/index.adoc' // [변경 10]: index.adoc만 처리
        }

        dependsOn subprojects.test
    }


//
//    bootJar.enabled = false
//    jar.enabled = false
}



